--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -36,7 +36,7 @@
                 </div>
                 <div id="boom-detail-browser"></div>
                 <div id="boom-detail-focus"></div>
-                <div id="boom-detail-poster-left"><img width="300" height="450" src=""></div>
+                <div id="boom-detail-large-poster"><img width="300" height="450" src=""></div>
             </div>
         </div>
 
@@ -51,6 +51,6 @@
 
         <div id="boom-credit-text"></div>
 
-        <canvas id="boom-image-color-canvas"></canvas>
+        <canvas id="boom-image-sampler-canvas"></canvas>
     </body>
 </html>
