Re-implemented selection and playback of trailers and any available movie version.

--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -38,6 +38,10 @@
                 <div id="boom-detail-focus"></div>
                 <div id="boom-detail-large-poster"><img width="300" height="450" src=""></div>
             </div>
+            <div id="boom-detail-buttons-shade"></div>
+            <div id="boom-detail-available-streams">
+                <div id="boom-detail-watch-trailer" class="boom-button">Watch trailer</div>
+            </div>
         </div>
 
         <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="https://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
