--- a/frontend/app/html/gui.html
+++ b/frontend/app/html/gui.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
-    <head><meta charset="utf-8"></head>
+    <head>
+        <meta charset="utf-8">
+        <link href="/static/css/app.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/icons.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/buttons.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/grid.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/detail.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/ha.css" rel="stylesheet" type="text/css" media="screen">
+        <script src="/static/js/gui.js" async="async" defer="defer"></script>
+    </head>
     <body>
 
         <div id="boom-menu">
