Refactored to reduce complexity.

--- a/frontend/app/html/configure.html
+++ b/frontend/app/html/configure.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
-    <head><meta charset="utf-8"></head>
+    <head>
+        <meta charset="utf-8">
+        <link href="/static/css/app.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/icons.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/buttons.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/configure.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="/static/css/ha.css" rel="stylesheet" type="text/css" media="screen">
+        <script src="/static/js/configure.js" async="async" defer="defer"></script>
+    </head>
     <body>
         <div class="boom-button-floater" id="boom-button-start-floater"></div>
         <div class="boom-button-floater" id="boom-button-selection-floater"></div>
