Relabeled trailer button.

--- a/frontend/html/gui.html
+++ b/frontend/html/gui.html
@@ -49,7 +49,7 @@
             </div>
             <div id="boom-detail-buttons-shade"></div>
             <div id="boom-detail-available-streams">
-                <div id="boom-detail-watch-trailer" class="boom-button">Watch trailer</div>
+                <div id="boom-detail-watch-trailer" class="boom-button">Trailer</div>
             </div>
         </div>
 
