Implemented GUI updates of pending scan objects.

--- a/frontend/html/gui.html
+++ b/frontend/html/gui.html
@@ -30,6 +30,7 @@
             <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-sort-budget-desc" data-select-color="#2ecc40"><i class="fa fa-fw fa-area-chart"></i>Sort by: Budget (largest first)</div>
             <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-change-import" data-select-color="#0074d9"><i class="fa fa-fw fa-cogs"></i>Change movie import configuration</div>
             <div class="boom-button boom-align-left boom-button-wide" id="boom-config-button-show-credits" data-select-color="#85144b"><i class="fa fa-fw fa-file-text-o"></i>Show license information</div>
+            <div id="boom-menu-pending-objects"><i class="fa fa-refresh"></i><span></span></div>
         </div>
 
         <div id="boom-movie-grid-container"></div>
