Added persistence and display of certification.

--- a/frontend/html/gui.html
+++ b/frontend/html/gui.html
@@ -46,6 +46,7 @@
                         <li id="boom-detail-release"></li>
                         <li id="boom-detail-rating"></li>
                         <li id="boom-detail-runtime"></li>
+                        <li id="boom-detail-certification"></li>
                         <li id="boom-detail-genres"></li>
                     </ul>
                     <div id="boom-detail-storyline"></div>
