--- a/frontend/html/gui.html
+++ b/frontend/html/gui.html
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <iframe id="boom-movie-trailer" seamless="seamless" type="text/html" width="1920" height="1080" src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
+        <iframe id="boom-movie-trailer" seamless="seamless" width="1920" height="1080" src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1&origin=http://127.0.0.1:59741"></iframe>
 
         <div id="boom-grid-focus"></div>
 
